Major changes and error fixed

--- a/demo/package.json
+++ b/demo/package.json
@@ -3,19 +3,20 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev -p 5100",
     "build": "next build",
-    "start": "next start -p 3001"
+    "start": "next start -p 5100"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@next-tools/dynamic": "^0.0.11",
+    "minder-data-provider": "file:..",
+    "next": "14.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "typescript": "^5.0.0"
+    "@types/react": "18.2.38",
+    "@types/react-dom": "18.2.16",
+    "typescript": "5.3.2"
   }
 }
