--- a/package.json
+++ b/package.json
@@ -100,15 +100,14 @@
   ],
   "author": "Minder Data Provider Team",
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.59.20",
     "axios": "^1.7.7",
     "immer": "^10.1.1",
-    "react-redux": "^9.1.2"
-  },
-  "devDependencies": {
-    "@tanstack/react-query-devtools": "^5.59.20",
+    "react-redux": "^9.1.2",
     "@types/cors": "^2.8.17",
     "@babel/core": "^7.28.5",
     "@babel/plugin-transform-class-static-block": "^7.28.3",
@@ -127,7 +126,12 @@
   },
   "peerDependencies": {
     "react": ">=18.0.0",
-    "react-dom": ">=18.0.0"
+    "react-dom": ">=18.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "@reduxjs/toolkit": "^2.0.0",
+    "axios": "^1.0.0",
+    "immer": "^10.0.0",
+    "react-redux": "^9.0.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
