--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "minder-data-provider",
   "version": "1.0.0",
-  "type": "module",
   "description": "Production-ready hybrid Redux + TanStack Query data provider for Next.js with CORS support, WebSocket, and advanced caching",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -108,6 +107,8 @@
     "axios": "^1.7.7",
     "immer": "^10.1.1",
     "react-redux": "^9.1.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.1.5",
     "@types/cors": "^2.8.17",
     "@babel/core": "^7.28.5",
     "@babel/plugin-transform-class-static-block": "^7.28.3",
@@ -138,11 +139,12 @@
     "setupFilesAfterEnv": [
       "<rootDir>/tests/setup.js"
     ],
-    "preset": "ts-jest",
-    "extensionsToTreatAsEsm": [
-      ".ts",
-      ".tsx"
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/demo/",
+      "/dist/"
     ],
+    "preset": "ts-jest",
     "moduleNameMapper": {
       "^(\\.{1,2}/.*)\\.js$": "$1"
     },
@@ -150,7 +152,11 @@
       "^.+\\.(ts|tsx)$": [
         "ts-jest",
         {
-          "useESM": true
+          "tsconfig": {
+            "jsx": "react",
+            "esModuleInterop": true,
+            "allowSyntheticDefaultImports": true
+          }
         }
       ]
     },
