--- a/package.json
+++ b/package.json
@@ -111,6 +111,8 @@
     "demo:build": "cd demo && npm run build",
     "start": "npm run demo",
     "analyze": "npm run build && npx bundlesize",
+    "analyze-bundle": "npm run build && node scripts/analyze-bundle.js",
+    "verify-lazy-loading": "node scripts/verify-lazy-loading.js",
     "security-audit": "npm audit --audit-level moderate"
   },
   "keywords": [
@@ -154,7 +156,8 @@
     "react-redux": "^9.1.2",
     "ts-jest": "^29.1.2",
     "tsup": "^8.0.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "peerDependencies": {
     "@reduxjs/toolkit": "^2.0.0",
@@ -164,6 +167,17 @@
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
     "react-redux": "^9.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@reduxjs/toolkit": {
+      "optional": true
+    },
+    "react-redux": {
+      "optional": true
+    },
+    "immer": {
+      "optional": true
+    }
   },
   "jest": {
     "testEnvironment": "jsdom",
