--- a/demo/docker/api/package.json
+++ b/demo/docker/api/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "minder-api-server",
+  "name": "minder-api",
   "version": "2.1.0",
-  "description": "API server for Minder Data Provider demo",
-  "main": "server.js",
   "private": true,
+  "main": "server.js",
   "scripts": {
-    "start": "node api/server.js",
-    "dev": "nodemon api/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": ["minder", "api", "demo"],
-  "author": "Minder Team",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
@@ -24,12 +20,9 @@
     "joi": "^17.11.0",
     "express-rate-limit": "^7.1.5",
     "compression": "^1.7.4",
-    "dotenv": "^16.3.1",
-    "socket.io": "^4.6.0",
-    "socket.io-client": "^4.6.0"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
 }
-
