--- a/demo/package.json
+++ b/demo/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@next-tools/dynamic": "^0.0.11",
+    "@tanstack/react-query": "5.59.20",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.552.0",
     "minder-data-provider": "file:..",
     "next": "14.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
