--- a/demo/package.json
+++ b/demo/package.json
@@ -13,17 +13,20 @@
     "@tanstack/react-query": "5.59.20",
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
-    "minder-data-provider": "file:..",
-    "next": "14.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "14.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.16",
+    "@types/node": "^20.14.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "5.3.2"
   }
 }
