fix(demo): Remove Pages Router files and update TypeScript config
- Removed conflicting Pages Router directory (pages/)
- Deleted unused pages/_app.tsx, index.tsx, and other page files
- Removed Zustand-based useAuth.ts hook (using AuthProvider instead)
- Updated tsconfig.json to exclude pages.old directory
- Removed .babelrc (not needed for Next.js 14)

Resolves 'Conflicting app and page file' error

--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -15,11 +19,33 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "minder-data-provider": ["../src/index.ts"],
-      "minder-data-provider/*": ["../src/*"]
-    }
+      "@/*": [
+        "./*"
+      ],
+      "minder-data-provider": [
+        "../src/index.ts"
+      ],
+      "minder-data-provider/*": [
+        "../src/*"
+      ]
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "examples", ".next", "docker"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "examples",
+    "pages.old",
+    ".next",
+    "docker"
+  ]
 }
