--- a/demo/package.json
+++ b/demo/package.json
@@ -13,9 +13,9 @@
     "@tanstack/react-query": "5.59.20",
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
-    "next": "14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "next": "^16.0.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "web-vitals": "^5.1.0"
