--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "lint": "eslint src --ext .ts,.tsx --fix",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist",
+    "postinstall": "node scripts/check-peer-deps.js || true",
     "prepublishOnly": "npm run clean && npm run build && npm run test",
     "demo": "cd demo && npm run dev",
     "demo:build": "cd demo && npm run build",
@@ -113,7 +114,9 @@
     "analyze": "npm run build && npx bundlesize",
     "analyze-bundle": "npm run build && node scripts/analyze-bundle.js",
     "verify-lazy-loading": "node scripts/verify-lazy-loading.js",
-    "security-audit": "npm audit --audit-level moderate"
+    "security-audit": "npm audit --audit-level moderate",
+    "check-versions": "node scripts/check-peer-deps.js",
+    "fix-versions": "node scripts/fix-peer-deps.js"
   },
   "keywords": [
     "react",
@@ -164,8 +167,8 @@
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.0.0",
     "immer": "^10.0.0",
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
     "react-redux": "^9.0.0"
   },
   "peerDependenciesMeta": {
@@ -178,6 +181,10 @@
     "immer": {
       "optional": true
     }
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
