--- a/examples/web/e-commerce/tsconfig.json
+++ b/examples/web/e-commerce/tsconfig.json
@@ -14,12 +14,18 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Path aliases */
+    "baseUrl": ".",
+    "paths": {
+      "@shared/*": ["../../shared/*"]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "../../shared"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
