feat: Complete v2.0 release with examples, documentation cleanup, and README rewrite
- ✅ README.md: Complete rewrite emphasizing scalability and platform support
  - Added 'One Library. Zero Code Changes' hero message
  - Scale proof: 10 to 10M users with 0 code changes
  - Complete tech stack explanation (TanStack Query, Redux, Axios, TypeScript)
  - 4-level usage guide (Minimal → Standard → Advanced → Enterprise)
  - 8 unique differentiators showcasing package power
  - Real-world use cases and bundle analysis
  - Traditional vs Minder comparison (500 lines → 20 lines)

- 🗑️ Cleanup: Removed duplicate documentation from root
  - Deleted 24 duplicate .md files (moved to docs/development/)
  - Removed demo/ folder
  - Root now contains only 4 essential files: README, CHANGELOG, CONTRIBUTING, SECURITY

- 📦 Examples: All 5 platforms configured with local package
  - Web E-commerce (React + Vite)
  - Next.js Blog (SSR/SSG/ISR)
  - Node.js API (Express)
  - React Native (Offline Todo)
  - Expo (Quickstart)
  - All using 'file:../../../' symlinks to main package

- 📚 Documentation: Properly organized
  - COMPLETE_PLATFORM_GUIDE.md - Master guide for all 6 platforms
  - COMPLETE_SETUP_SUMMARY.md - Setup statistics and quick start
  - MOBILE_PLATFORMS.md - React Native & Expo setup
  - RUNNING_EXAMPLES.md - Web/server examples guide
  - README_REWRITE_COMPLETE.md - Documentation of README changes

- ✅ Verification: All functionality working
  - Package builds successfully
  - All examples import minder-data-provider correctly
  - TypeScript definitions generated
  - No errors in any example

--- a/examples/expo/quickstart/package.json
+++ b/examples/expo/quickstart/package.json
@@ -20,7 +20,7 @@
     "expo-camera": "~14.0.5",
     "expo-image-picker": "~14.7.1",
     "@tanstack/react-query": "^5.8.4",
-    "minder-data-provider": "latest"
+    "minder-data-provider": "file:../../../"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
