--- a/examples/nextjs/blog/package.json
+++ b/examples/nextjs/blog/package.json
@@ -16,7 +16,8 @@
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tanstack/react-query": "^5.8.4"
+    "@tanstack/react-query": "^5.8.4",
+    "minder-data-provider": "file:../../../"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
