--- a/examples/nodejs/api/package.json
+++ b/examples/nodejs/api/package.json
@@ -24,7 +24,7 @@
     "helmet": "^7.1.0",
     "compression": "^1.7.4",
     "dotenv": "^16.3.1",
-    "minder-data-provider": "latest"
+    "minder-data-provider": "file:../../../"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
