--- a/examples/react-native/offline-todo/package.json
+++ b/examples/react-native/offline-todo/package.json
@@ -19,7 +19,7 @@
     "@react-native-community/netinfo": "^11.2.0",
     "@tanstack/react-query": "^5.8.4",
     "react-native-vector-icons": "^10.0.3",
-    "minder-data-provider": "latest"
+    "minder-data-provider": "file:../../../"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
