fix: Fix failing tests for npm publish
- Fix LoggerPlugin test to match actual plugin name ('logger')
- Fix logger message formatting test to expect timestamp
- Exclude examples from test suite (they use Vitest, not Jest)

--- a/package.json
+++ b/package.json
@@ -182,7 +182,8 @@
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/demo/",
-      "/dist/"
+      "/dist/",
+      "/examples/"
     ],
     "preset": "ts-jest",
     "moduleNameMapper": {
