fix: Reduce package size from 10.1MB to 2.9MB by excluding source maps
- Updated package.json files field to exclude .map files
- Added .npmignore to explicitly exclude source maps and dev files
- Package size reduced from 2.0MB to 545KB (73% reduction)
- Unpacked size reduced from 10.1MB to 2.9MB (71% reduction)
- Removed 30 unnecessary files from the package

This makes the package much more lightweight for npm installations.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist/**/*",
+    "dist/**/*.js",
+    "dist/**/*.mjs",
+    "dist/**/*.d.ts",
+    "dist/**/*.d.mts",
+    "!dist/**/*.map",
     "README.md",
     "LICENSE"
   ],
