feat: Configure Git-npm connection with automated workflows
- Add GitHub Actions workflows (CI, publish, release)
- Configure npm provenance for security attestation
- Add release management scripts (release:patch/minor/major)
- Update README badges (npm downloads, bundle size, GitHub stars, CI status)
- Create comprehensive setup documentation
- Enable one-command deployment (npm run release:patch)

Automated publishing workflow:
- Runs tests before publishing
- Creates GitHub releases with changelog
- Publishes to npm with provenance
- Syncs git tags with npm versions

Next step: Add NPM_TOKEN secret to GitHub for automation

--- a/package.json
+++ b/package.json
@@ -120,7 +120,11 @@
     "verify-lazy-loading": "node scripts/verify-lazy-loading.js",
     "security-audit": "npm audit --audit-level moderate",
     "check-versions": "node scripts/check-peer-deps.js",
-    "fix-versions": "node scripts/fix-peer-deps.js"
+    "fix-versions": "node scripts/fix-peer-deps.js",
+    "release:patch": "npm version patch && git push --follow-tags",
+    "release:minor": "npm version minor && git push --follow-tags",
+    "release:major": "npm version major && git push --follow-tags",
+    "release:check": "npm run clean && npm run build && npm run test && npm pack --dry-run"
   },
   "keywords": [
     "react",
