--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,13 @@ name: Publish to npm
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'examples/**'
+      - '.github/**'
 
 jobs:
   publish:
@@ -30,7 +35,32 @@ jobs:
       - name: Build
         run: npm run build
       
+      - name: Check if version changed
+        id: version_check
+        run: |
+          PUBLISHED_VERSION=$(npm view minder-data-provider version 2>/dev/null || echo "0.0.0")
+          CURRENT_VERSION=$(node -p "require('./package.json').version")
+          echo "published=$PUBLISHED_VERSION" >> $GITHUB_OUTPUT
+          echo "current=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+          if [ "$PUBLISHED_VERSION" = "$CURRENT_VERSION" ]; then
+            echo "changed=false" >> $GITHUB_OUTPUT
+            echo "Version $CURRENT_VERSION already published"
+          else
+            echo "changed=true" >> $GITHUB_OUTPUT
+            echo "New version detected: $CURRENT_VERSION (published: $PUBLISHED_VERSION)"
+          fi
+      
+      - name: Create git tag
+        if: steps.version_check.outputs.changed == 'true'
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -a "v$VERSION" -m "Release v$VERSION"
+          git push origin "v$VERSION"
+      
       - name: Publish to npm
+        if: steps.version_check.outputs.changed == 'true'
         run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
