feat: Export all enums and add preserveConstEnums to tsconfig
- Export all enums from constants/enums.ts in main index.ts
- Add preserveConstEnums to tsconfig.json for runtime enum availability
- Export type guards and enum utility types
- Remove duplicate HttpMethod type import
- Rename Platform type export to avoid conflict with Platform enum
- Add comprehensive enum exports for type-safe configuration

BREAKING: Platform type from platform detector renamed to PlatformDetectionType

Resolves: Enum types now available to end users at runtime
All tests passing (441/441)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,10 @@
     "moduleResolution": "NodeNext",
     "esModuleInterop": true,
 
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    
+    // Enum Preservation - Required for enums to be available at runtime
+    "preserveConstEnums": true
   },
   "include": ["src/**/*"]
 }
