refactor: Organize documentation files into proper structure
ORGANIZATION CHANGES:
- Move TODO.md → docs/development/TODO.md
- Move GIT_NPM_SETUP.md → docs/development/GIT_NPM_SETUP.md
- Move GIT_NPM_CONNECTION_SUMMARY.md → docs/development/GIT_NPM_CONNECTION.md
- Move QUICK_RELEASE.md → docs/development/RELEASE_GUIDE.md
- Move PLATFORMS_RUNNING.md → docs/PLATFORM_STATUS.md
- Move TEST_RESULTS_SUMMARY.md → docs/development/TEST_RESULTS.md
- Move BUNDLE_ANALYSIS.json → docs/development/bundle-analysis.json

NPMIGNORE UPDATES:
- Keep user-facing docs in npm package (API_REFERENCE, CONFIG_GUIDE, etc.)
- Exclude docs/development/ from package
- Exclude docs/examples/ from package
- Reduce package size by excluding internal documentation

ROOT FOLDER NOW CLEAN:
- README.md ✅ (required for npm/GitHub)
- LICENSE ✅ (required)
- CHANGELOG.md ✅ (standard)
- CONTRIBUTING.md ✅ (GitHub standard)
- SECURITY.md ✅ (GitHub standard)
- All config files (package.json, tsconfig.json, etc.)

BENEFITS:
- Follows standard project structure
- Separates internal docs from user docs
- Reduces npm package size
- Easier to maintain and navigate
- Consistent with best practices

All 443 tests passing ✅

--- a/.npmignore
+++ b/.npmignore
@@ -5,7 +5,8 @@ dist/**/*.map
 src/
 tests/
 examples/
-docs/
+docs/development/
+docs/examples/
 scripts/
 coverage/
 
@@ -24,14 +25,16 @@ jest.config.js
 test-*.txt
 
 # Documentation (except README)
+# Keep user-facing docs (API_REFERENCE, CONFIG_GUIDE, etc.)
+# Exclude development docs
 CHANGELOG.md
 CONTRIBUTING.md
 CODE_OF_CONDUCT.md
-PLATFORMS_RUNNING.md
-TEST_RESULTS_SUMMARY.md
-BUNDLE_ANALYSIS.json
 *.md
 !README.md
+!docs/*.md
+docs/development/
+docs/examples/
 
 # Git files
 .git
