--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,36 +5,36 @@ on:
     branches:
       - main
     paths-ignore:
-      - '**.md'
-      - 'docs/**'
-      - 'examples/**'
-      - '.github/**'
+      - "**.md"
+      - "docs/**"
+      - "examples/**"
+      - ".github/**"
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write # Changed from 'read' to 'write' to allow tagging and pushing
       id-token: write # Required for npm provenance
-    
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
-      
+          node-version: "20"
+          registry-url: "https://registry.npmjs.org"
+
       - name: Install dependencies
         run: npm ci
-      
+
       - name: Run tests
         run: npm test
-      
+
       - name: Build
         run: npm run build
-      
+
       - name: Check if version changed
         id: version_check
         run: |
@@ -49,7 +49,7 @@ jobs:
             echo "changed=true" >> $GITHUB_OUTPUT
             echo "New version detected: $CURRENT_VERSION (published: $PUBLISHED_VERSION)"
           fi
-      
+
       - name: Create git tag
         if: steps.version_check.outputs.changed == 'true'
         run: |
@@ -58,7 +58,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git tag -a "v$VERSION" -m "Release v$VERSION"
           git push origin "v$VERSION"
-      
+
       - name: Publish to npm
         if: steps.version_check.outputs.changed == 'true'
         run: npm publish --provenance --access public
