feat: separate default logger from main import for bundle size optimization
- Created separate 'minder-data-provider/logger' export for defaultLogger
- Removed defaultLogger from main utils/index.ts export
- Updated package.json exports to include logger entry point
- Added logger to tsup build configuration
- Updated logger tests to import from new location
- Logger is now ~2KB separate bundle instead of being included in main bundle
- Users can import logger separately: import { defaultLogger } from 'minder-data-provider/logger'

--- a/package.json
+++ b/package.json
@@ -99,6 +99,11 @@
       "types": "./dist/ssr/index.d.ts",
       "import": "./dist/ssr/index.mjs",
       "require": "./dist/ssr/index.js"
+    },
+    "./logger": {
+      "types": "./dist/logger/index.d.ts",
+      "import": "./dist/logger/index.mjs",
+      "require": "./dist/logger/index.js"
     }
   },
   "scripts": {
