--- a/package.json
+++ b/package.json
@@ -159,24 +159,30 @@
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/plugin-transform-class-static-block": "^7.28.3",
+    "@eslint/js": "^9.39.1",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.3.0",
     "@types/cors": "^2.8.17",
     "@types/dompurify": "^3.0.5",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.19.24",
     "@types/react": "^18.2.73",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.5.0",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jiti": "^2.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "ts-jest": "^29.1.2",
     "tsup": "^8.0.2",
     "typescript": "^5.4.3",
+    "typescript-eslint": "^8.46.4",
     "webpack-bundle-analyzer": "^4.10.2"
   },
   "peerDependencies": {
