--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ dev, test, main ]
+    branches: [ dev ]
   pull_request:
     branches: [ dev, test, main ]
 
